Fix event calender on mobile and add 2025 rockets

--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -6,6 +6,7 @@
 .calendar {
   max-width: 900px;
   margin: 0 auto;
+  overflow-x: scroll;
 }
 
 .calendar-controls {
